--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#d4d4d4"
-    tools:context=".GalleryActivity">
+    tools:context=".ui.gallery.GalleryActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_gallery_container"
