--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -9,15 +9,15 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_gallery_container"
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center_horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal" />
 
     <ProgressBar
-        android:layout_centerInParent="true"
-        android:layout_gravity="center"
         android:id="@+id/pb_gallery_loading"
         android:layout_width="40dp"
-        android:layout_height="40dp" />
+        android:layout_height="40dp"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center" />
 </RelativeLayout>
