--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -20,4 +20,13 @@
         android:layout_height="40dp"
         android:layout_centerInParent="true"
         android:layout_gravity="center" />
+
+    <ImageView
+        android:id="@+id/iv_no_wifi"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center"
+        android:src="@drawable/no_wifi"
+        android:visibility="invisible" />
 </RelativeLayout>
