--- a/app/src/main/res/layout/item_gallery_card.xml
+++ b/app/src/main/res/layout/item_gallery_card.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp">
 
     <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:src="@drawable/loading_indicator"
         android:id="@+id/iv_gallery_image"
         android:layout_width="match_parent"
-        android:layout_height="120dp" />
+        android:layout_height="120dp"
+        android:src="@drawable/loading_indicator"
+        tools:ignore="ContentDescription" />
 </android.support.v7.widget.CardView>
