--- a/app/src/main/res/menu/details.xml
+++ b/app/src/main/res/menu/details.xml
@@ -4,12 +4,12 @@
     <item
         android:id="@+id/action_share"
         android:icon="@android:drawable/ic_menu_share"
-        android:title="Share"
+        android:title="@string/share_action_title"
         app:showAsAction="always"/>
 
     <item
         android:id="@+id/action_save"
         android:icon="@android:drawable/ic_menu_save"
-        android:title="Save"
+        android:title="@string/save_action_title"
         app:showAsAction="always"/>
 </menu>
