--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,19 +4,19 @@
     <item
         android:id="@+id/action_home"
         android:icon="@drawable/ic_action_home_gray"
-        app:showAsAction="ifRoom"
-        android:title="Home"/>
+        android:title="@string/home_action_title"
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/action_search"
         android:icon="@android:drawable/ic_menu_search"
-        app:showAsAction="always|collapseActionView"
+        android:title="@string/search_action_title"
         app:actionViewClass="android.support.v7.widget.SearchView"
-        android:title="Search"/>
+        app:showAsAction="always|collapseActionView" />
 
-    <item android:id="@+id/action_about"
-        android:title="About"
+    <item
+        android:id="@+id/action_about"
         android:orderInCategory="1"
-        app:showAsAction="never">
-    </item>
+        android:title="@string/about_action_title"
+        app:showAsAction="never" />
 </menu>
