--- a/app/src/main/res/menu/details.xml
+++ b/app/src/main/res/menu/details.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_share"
-        android:icon="@android:drawable/ic_menu_share"
+        android:icon="@drawable/ic_action_share"
         android:title="@string/share_action_title"
         app:showAsAction="always"/>
 
     <item
         android:id="@+id/action_save"
-        android:icon="@android:drawable/ic_menu_save"
+        android:icon="@drawable/ic_action_save"
         android:title="@string/save_action_title"
         app:showAsAction="always"/>
 </menu>
