--- a/app/src/main/res/layout/activity_image_details.xml
+++ b/app/src/main/res/layout/activity_image_details.xml
@@ -15,8 +15,8 @@
 
     <ProgressBar
         android:id="@+id/pb_image_loading"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="@dimen/progress_bar_size"
+        android:layout_height="@dimen/progress_bar_size"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
