--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,7 @@
 <resources>
     <color name="colorPrimary">#9E9E9E</color>
     <color name="colorPrimaryDark">#616161</color>
-    <color name="colorAccent">#607D8B</color>
+    <color name="colorAccent">#FFE13D</color>
 
-    <color name="bg_screen">#d4d4d4</color>
-    <color name="about_background_color">@color/bg_screen</color>
+    <color name="bg_screen">#F5F5F5</color>
 </resources>
