--- a/app/src/main/res/values/settings.xml
+++ b/app/src/main/res/values/settings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="client_id">PUT_YOUR_UNSPLASH_COM_KEY_HERE</string>
+    <string name="client_id" translatable="false">PUT_YOUR_UNSPLASH_COM_KEY_HERE</string>
 </resources>
