--- a/app/src/main/res/layout/activity_image_details.xml
+++ b/app/src/main/res/layout/activity_image_details.xml
@@ -21,4 +21,29 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <FrameLayout
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:id="@+id/bottom_layout"
+        style="@android:style/ButtonBar"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:background="@color/black_overlay"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/btn_set_as_wallpaper"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|center_vertical"
+            android:layout_marginRight="8dp"
+            android:gravity="right"
+            android:text="@string/set_as_wallpaper"
+            android:textAllCaps="true"
+            android:textColor="#FFFFFF"
+            android:textSize="16sp" />
+
+    </FrameLayout>
 </android.support.constraint.ConstraintLayout>
