--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FFE13D</color>
 
     <color name="bg_screen">#F5F5F5</color>
+    <color name="black_overlay">#66000000</color>
 </resources>
