--- a/app/src/main/res/layout/activity_image_details.xml
+++ b/app/src/main/res/layout/activity_image_details.xml
@@ -23,15 +23,15 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <FrameLayout
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         android:id="@+id/bottom_layout"
         style="@android:style/ButtonBar"
         android:layout_width="0dp"
         android:layout_height="40dp"
         android:background="@color/black_overlay"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
 
         <TextView
             android:id="@+id/btn_set_as_wallpaper"
@@ -39,6 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="right|center_vertical"
             android:layout_marginRight="8dp"
+            android:enabled="false"
             android:gravity="right"
             android:text="@string/set_as_wallpaper"
             android:textAllCaps="true"
