--- a/app/src/main/res/layout/item_gallery_card.xml
+++ b/app/src/main/res/layout/item_gallery_card.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="4dp">
 
-    <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+    <ImageView
         android:id="@+id/iv_gallery_image"
         android:layout_width="match_parent"
         android:layout_height="120dp"
